# fileManager

./: .gitignore  CONSOLIDATION_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  EMBEDDED_FRONTEND_GUIDE.md  EMBEDDED_FRONTEND_IMPLEMENTATION.md  Makefile  PACKAGING.md  README.md  WINDOWS_SINGLE_EXE_SOLUTION.md  build.sh  filemanager.sh  filemanager_2.0.0_amd64.deb  filemanager_2.0.0_arm64.deb  go.mod  helper.go  helper_windows.go  main.go  operations.go  templates.go  version.go  webserver.go
.github/: saved_replies.md
arch/: PKGBUILD
arch-arm64/: PKGBUILD
docs/: ADVANCED_FEATURES.md  ARM64_BUILD_SETUP.md  AUTO_UPDATE_SYSTEM.md  BUILD_GUIDE.md  BUILD_NOW.md  BUILD_SYSTEM_SUMMARY.md  CROSS_PLATFORM_BUILD.md  DYNAMIC_VERSION_IMPLEMENTATION.md  DYNAMIC_VERSION_SYSTEM.md  FRONTEND_PACKAGING.md  FRONTEND_VERIFICATION.md  IMPLEMENTATION_VERIFICATION.md  INSTALL.md  INTEGRATION.md  MIGRATION.md  QUICK_FIX.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_EXAMPLES.md  SETUP.md  SNAP_BUILD_GUIDE.md  UPDATE_STRATEGY.md  USAGE_GUIDE copy.md  VERSION_MANAGEMENT.md
file_manager/: README.md  go.mod
interactive_builder/: builder.go
rust_ffi/: Cargo.toml  README.md
rust_ffi/crates/cli/: Cargo.toml
rust_ffi/crates/cli/src/: main.rs
rust_ffi/crates/core/: Cargo.toml
rust_ffi/crates/core/src/: lib.rs
rust_ffi/crates/core/src/common/: mod.rs
rust_ffi/crates/core/src/ffi/: mod.rs
rust_ffi/crates/core/src/operations/: copy.rs  create.rs  delete.rs  file_permissions.rs  mod.rs  move_ops.rs  rename.rs
scripts/: build-all-platforms.sh  build-harmonyos.sh  build-linux-amd64.sh  build-linux-arm64.sh  build.sh  (+6 more)
(+39 files in other folders)
