# [workspace]
# members = ["crates/*"]

# [workspace.package]
# version = "0.1.0"
# edition = "2021"
# 
[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DevChigarlicMoses <moses.muranja@strathmore.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DevChigarlicMoses/rust_ffi"

[workspace.dependencies]
# Shared dependencies
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true