# [package]
# name = "core"
# version = "0.1.0"
# edition = "2021"
# 
[package]
name = "fs-operations-core"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
license = {workspace = true}
repository = {workspace = true}

[lib]
name = "fs_operations_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {workspace = true}
thiserror = {workspace = true}

[target.'cfg(unix)'.dependencies]
libc = "0.2"